Painted transparency with failures or limitations #52089

Closed
opened 2017-07-17 12:00:19 +02:00 by Albert · 9 comments

I note that the transparency of objects have some errors.
If Hide Backside is active the Grid disappears behind the object.
If Hide Backside is disabled some Backfaces overlap the object.
Volumetric Light is incompatible with transparencies.

Transparent.jpeg

I note that the transparency of objects have some errors. If Hide Backside is active the Grid disappears behind the object. If Hide Backside is disabled some Backfaces overlap the object. Volumetric Light is incompatible with transparencies. ![Transparent.jpeg](https://archive.blender.org/developer/F669851/Transparent.jpeg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @wevon-2

Added subscriber: @wevon-2
Clément Foucault was assigned by Dalai Felinto 2017-07-17 12:08:13 +02:00

This is by design. Without volume texture storing the volumetric properties it's impractical to render transparency with fog.
But the transparent objects should be visible without the fog effect applied on them.

The grid issue is because transparent object does not draw depth because of ordering issue. It's difficult to resolve without drawing multiple times.

This is by design. Without volume texture storing the volumetric properties it's impractical to render transparency with fog. But the transparent objects should be visible without the fog effect applied on them. The grid issue is because transparent object does not draw depth because of ordering issue. It's difficult to resolve without drawing multiple times.

This issue was referenced by fe8fc79cee

This issue was referenced by fe8fc79cee3647ab51c4587dfd279a815c93d062

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Trans.blend
It is difficult to see in the second image, it shows how some Backfaces are painted erroneously above the faces oriented to camera.
I hang another image where it is better appreciated. The yellow and green grid material are the same. There are two objects to the left and one with two materials to the right. From above the transparency is seen correctly, from below the order of painting is reversed.
Grid.jpeg

[Trans.blend](https://archive.blender.org/developer/F670790/Trans.blend) It is difficult to see in the second image, it shows how some Backfaces are painted erroneously above the faces oriented to camera. I hang another image where it is better appreciated. The yellow and green grid material are the same. There are two objects to the left and one with two materials to the right. From above the transparency is seen correctly, from below the order of painting is reversed. ![Grid.jpeg](https://archive.blender.org/developer/F670785/Grid.jpeg)

It's because transparency is order per object. Sorting pixels is too costly for realtime rendering.

It's because transparency is order per object. Sorting pixels is too costly for realtime rendering.
Author

Thanks for the aclaramient Clément.
From what I have seemed to appreciate the overlapping faces of the same object are sorted by identification number and by material. The materials under the pile are painted at the end (above).

Thanks for the aclaramient Clément. From what I have seemed to appreciate the overlapping faces of the same object are sorted by identification number and by material. The materials under the pile are painted at the end (above).

That's correct. But it's not view dependent. So order can be wrong when changing viewing angle.

That's correct. But it's not view dependent. So order can be wrong when changing viewing angle.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52089
No description provided.