source/blender/draw/engines/eevee/eevee_effects.c
@@ -747,6 +747,9 @@ void EEVEE_effects_do_volumetrics(EEVEE_SceneLayerData *sldata, EEVEE_Data *veda
 		if (sldata->volumetrics->use_colored_transmit) {
 			DRW_framebuffer_texture_detach(stl->g_data->volumetric_transmit);
 		}
+
+		/* Rebind main buffer after attach/detach operations */
+		DRW_framebuffer_bind(fbl->main);
 	}
 }
 
